Fix missing color in cluster switcher
i removed the search display as well because the message didnt really make sense with the search just above it.

rancher/dashboard#2329

--- a/assets/styles/global/_select.scss
+++ b/assets/styles/global/_select.scss
@@ -20,7 +20,7 @@
 .unlabeled-select {
   min-width: 75px;
   // line-height: $input-line-height;
-  
+
   .v-select {
     &.inline {
 
@@ -112,10 +112,6 @@
 
     &.inline {
       height: 100%;
-
-      &.vs--unsearchable {
-
-      }
 
       .vs__dropdown-toggle {
         height: 100%;
